<resources>
    <string name="app_name">JP Construction LPP</string>
    <string name="title_activity_sale">Sale</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_shop">Shop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Follow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_shops">Shops</string>

    <string name="home">Home</string>
    <string name="select">Select</string>
    <string name="i_sign">Issuer Signature</string>
    <string name="r_sign">Receiver Signature</string>
    <string name="zone">Zone</string>
    <string name="location">Location</string>
    <string name="external_dir">GetSignature</string>
    <string name="error_field_required">This field is required</string>

    <string name="hint_sign">Get Signature</string>
    <string name="dialog_title">SIGN HERE</string>
    <string name="hint_cancel">Cancel</string>
    <string name="hint_clear">Clear</string>
    <string name="hint_save">Save</string>
    <string name="v_sign">Vendor Signature</string>
    <string name="a_sign">Authorised Signature</string>

    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Submit</string>
    <string name="submit">SUBMIT</string>
    <string name="add_purchase">Add Purchase</string>
    <string name="pur_title">Purchase date</string>
    <string name="item">Item</string>
    <string name="item_type">Item Type</string>
    <string name="s_qty">Quantity</string>
    <string name="rate">Rate</string>
    <string name="choose">Choose from calender.</string>
    <string name="attendence">Attendance Report</string>
    <string name="expense_title">Expense Name :</string>
    <string name="bill_date">Date</string>
    <string name="bill_no">Bill No.</string>
    <string name="upload">Upload</string>
    <string name="name">Name</string>
    <string name="add_exp">Add Expense</string>
    <string name="amt">Amount</string>
    <string name="save">Save</string>
    <string name="add">ADD</string>
    <string name="Particulars">Remarks(optional)</string>
    <string name="click_type">Click or type</string>
    <string name="add_name">Add name</string>
    <string name="add_bill">Add bill no.</string>
    <string name="y_name">Your name</string>
    <string name="part_ex">Additinal info.</string>
    <string name="total">\u20B9 0.00</string>
    <string name="staff_info">Staff Information</string>
    <string name="capture">Add</string>
    <string name="staff_name">Staff Name :</string>
    <string name="f_staff_name">Father\'s Name :</string>
    <string name="age">Age :</string>
    <string name="sex">Sex :</string>
    <string name="m_text">male</string>
    <string name="f_text">female</string>
    <string name="address">Address :</string>
    <string name="city">City :</string>
    <string name="state">State :</string>
    <string name="mob">Mobile :</string>
    <string name="salary">Salary :</string>
    <string name="desg">Designation :</string>
    <string name="man_power">Man Power</string>
    <string name="join_date">Date of Joining :</string>
    <string name="pf">Company PF No.(optional) :</string>
    <string name="tax">Income Tax No.(optional) :</string>
    <string name="expense_titles">Expenses</string>
    <string name="ex_date">Date</string>
    <string name="expense_list">Total Expenses</string>
    <string name="dates">Date</string>
    <string name="viewattendence">Attendance Report</string>
    <string name="expense_report">Expenses Report</string>
    <string name="email">Email :</string>
    <string name="non_skilled">Non Skilled</string>
    <string name="employee_title">Employee Name :</string>
    <string name="employee">Employee</string>
    <string name="payroll_date">Payroll Period :</string>
    <string name="or">or</string>
    <string name="to">To</string>
    <string name="from">from</string>
    <string name="method">Payment Metod :</string>
    <string name="pay_date">Pay Date :</string>
    <string name="payroll_details">Payroll Details</string>
    <string name="too">to</string>
    <string name="methods">method</string>
    <string name="income">Income</string>
    <string name="deduction">Deductions</string>
    <string name="b_salary">Basic Salary :</string>
    <string name="o_income">Other Income :</string>
    <string name="contribution">Contributions :</string>
    <string name="total_income">Total Income :</string>
    <string name="total_deduction">Total Deduction :</string>
    <string name="net_pay">Net Pay :</string>
    <string name="new_v">New version available</string>
    <string name="update_text">Please, "\n"
        update app to new version
        to continue reposting.</string>
    <string name="cancel">NO,THANKS</string>
    <string name="update">Update</string>
    <string name="no_days">Number Of Days Present :</string>
    <string name="ex_days">Days</string>
    <string name="adv_sal">Advance Salary :</string>
    <string name="count">Count</string>
    <string name="type">type</string>
    <string name="mail_hint">example@gmail.com</string>
    <string name="mail_sub">mail subject</string>
    <string name="mail_msg">enter message</string>
    <string name="discount">Discount (%)</string>
    <string name="gst_rate">GST Rate</string>
    <string name="choose_s">Suppliers</string>
    <string name="choose_t">type</string>
    <string name="uom">UOM</string>
    <string name="set_zero">0.00</string>
    <string name="s_hsn">HSN Code</string>
    <string name="title_activity_customer">Customer</string>
    <string name="error_incorrect_password">This password is incorrect</string>
</resources>
